--- a/main.css
+++ b/main.css
@@ -4,6 +4,33 @@ html {
   font-family: 'Ubuntu', sans-serif;
   font-size: 1em;
 }
+h1 {
+  font-size: 3em;
+  font-weight: normal;
+}
+h2 {
+  font-size: 2.4em;
+  font-weight: normal;
+}
+h3 {
+  font-size: 1.8em;
+  font-weight: bold;
+}
+h4 {
+  font-size: 1.6em;
+  font-weight: normal;
+}
+h5 {
+  font-size: 1.2em;
+  font-weight: normal;
+}
+h6 {
+  font-size: 1em;
+  font-weight: bold;
+}
+ul {
+  padding-left: 1.6em;
+}
 .container {
   margin: 0 auto;
   max-width: 36em;
