--- a/_base.jade
+++ b/_base.jade
@@ -11,3 +11,8 @@ html(lang="en")
 	body
 		.container
 			block content
+		footer.container
+			hr
+			ul
+				li: a(href="http://about.mattms.info/") About MattMS
+				li: a(href="https://github.com/MattMS/css.mattms.info") View on GitHub
