--- a/main.styl
+++ b/main.styl
@@ -6,28 +6,34 @@ html
 	font-size 1em
 
 h1
+	color darkred
 	font-size 3em
 	font-weight normal
 
 h2
+	color darkgreen
 	font-size 2.4em
 	font-weight normal
 
 h3
+	color darkblue
 	font-size 1.8em
-	font-weight bold
+	font-weight normal
 
 h4
+	color darkred
 	font-size 1.6em
 	font-weight normal
 
 h5
+	color darkgreen
 	font-size 1.2em
 	font-weight normal
 
 h6
+	color darkblue
 	font-size 1em
-	font-weight bold
+	font-weight normal
 
 ul
 	padding-left 1.6em
