--- a/main.styl
+++ b/main.styl
@@ -5,6 +5,16 @@ html
 	font-family 'Ubuntu', sans-serif
 	font-size 1em
 
+a
+a:visited
+	text-decoration-line underline
+	text-decoration-style dotted
+
+a:focus
+a:hover
+	text-decoration-line underline
+	text-decoration-style solid
+
 h1
 	color darkred
 	font-size 3em
