--- a/main.styl
+++ b/main.styl
@@ -1,5 +1,15 @@
 @import url('http://fonts.googleapis.com/css?family=Ubuntu')
 
+
+text-decoration-line()
+	-webkit-text-decoration-line arguments
+	-moz-text-decoration-line arguments
+
+text-decoration-style()
+	-webkit-text-decoration-style arguments
+	-moz-text-decoration-style arguments
+
+
 body
 html
 	font-family 'Ubuntu', sans-serif
