--- a/main.styl
+++ b/main.styl
@@ -25,6 +25,10 @@ a:hover
 	text-decoration-line underline
 	text-decoration-style solid
 
+p
+	line-height 1.6em
+	margin-bottom 1.6em
+
 h1
 	color darkred
 	font-size 3em
