--- a/main.css
+++ b/main.css
@@ -55,6 +55,12 @@ h6 {
 ul {
   padding-left: 1.6em;
 }
+li {
+  margin-bottom: 1em;
+}
+li > p {
+  margin-bottom: 0em;
+}
 .container {
   margin: 0 auto;
   max-width: 36em;
