--- a/main.styl
+++ b/main.styl
@@ -15,6 +15,7 @@ html
 	font-family 'Ubuntu', sans-serif
 	font-size 1em
 
+
 a
 a:visited
 	text-decoration-line underline
@@ -25,9 +26,11 @@ a:hover
 	text-decoration-line underline
 	text-decoration-style solid
 
+
 p
 	line-height 1.6em
 	margin-bottom 1.6em
+
 
 h1
 	color darkred
@@ -59,8 +62,15 @@ h6
 	font-size 1em
 	font-weight normal
 
+
 ul
 	padding-left 1.6em
+
+li
+	margin-bottom 1em
+
+li > p
+	margin-bottom 0em
 
 
 .container
