--- a/_base.styl
+++ b/_base.styl
@@ -33,34 +33,30 @@ p
 
 
 h1
-	color darkred
-	font-size 3em
+h2
+h3
+h4
+h5
+h6
 	font-weight normal
+
+h1
+	font-size 3em
 
 h2
-	color darkgreen
 	font-size 2.4em
-	font-weight normal
 
 h3
-	color darkblue
 	font-size 1.8em
-	font-weight normal
 
 h4
-	color darkred
 	font-size 1.6em
-	font-weight normal
 
 h5
-	color darkgreen
 	font-size 1.2em
-	font-weight normal
 
 h6
-	color darkblue
 	font-size 1em
-	font-weight normal
 
 
 ol
