Add regular text-decoration-style attribute

--- a/_base.styl
+++ b/_base.styl
@@ -4,10 +4,12 @@
 text-decoration-line()
 	-webkit-text-decoration-line arguments
 	-moz-text-decoration-line arguments
+	text-decoration-line arguments
 
 text-decoration-style()
 	-webkit-text-decoration-style arguments
 	-moz-text-decoration-style arguments
+	text-decoration-style arguments
 
 
 body
