--- a/light.styl
+++ b/light.styl
@@ -1,24 +1,23 @@
 @import '_base'
 
+body
+html
+	background-color white
+
 h1
 	color darkred
 
 h2
 	color darkgreen
-	font-size 2.4em
 
 h3
 	color darkblue
-	font-size 1.8em
 
 h4
 	color darkred
-	font-size 1.6em
 
 h5
 	color darkgreen
-	font-size 1.2em
 
 h6
 	color darkblue
-	font-size 1em
