--- a/_base.jade
+++ b/_base.jade
@@ -7,7 +7,7 @@ html(lang="en")
 		meta(name="description" content="CSS test page")
 		meta(name="viewport", content="width=device-width, initial-scale=1")
 		title CSS test page by MattMS
-		link(rel="stylesheet", href="main.css")
+		link(rel="stylesheet", href="/light.css")
 	body
 		.container
 			block content
