--- a/_base.jade
+++ b/_base.jade
@@ -14,5 +14,5 @@ html(lang="en")
 		footer.container
 			hr
 			ul
-				li: a(href="http://about.mattms.info/") About MattMS
+				li: a(href="http://about.mattms.info") Read about me
 				li: a(href="https://github.com/MattMS/css.mattms.info") View on GitHub
