--- a/_base.jade
+++ b/_base.jade
@@ -8,8 +8,8 @@ html(lang="en")
 		meta(name="viewport", content="width=device-width, initial-scale=1")
 		title CSS test page by MattMS
 
-		link(href="/light.css", rel="stylesheet", title="Light", type="text/css")
-		link(href="/solarized/dark.css", rel="alternate stylesheet", title="Solarized dark", type="text/css")
+		block css
+			include ./_css.jade
 	body
 		.container
 			block content
