Move Solarized dark files to folder

--- a/_css.jade
+++ b/_css.jade
@@ -1,2 +1,7 @@
 link(href="/light.css", rel="stylesheet", title="Light", type="text/css")
-link(href="/solarized/dark.css", rel="alternate stylesheet", title="Solarized dark", type="text/css")
+link(
+	href="/solarized/dark/main.css",
+	rel="alternate stylesheet",
+	title="Solarized dark",
+	type="text/css"
+)
