Update CSS links include

--- a/_css.jade
+++ b/_css.jade
@@ -1,4 +1,15 @@
-link(href="/light.css", rel="stylesheet", title="Light", type="text/css")
+link(
+	href="/basic/light/main.css",
+	rel="stylesheet",
+	title="Basic light",
+	type="text/css"
+)
+link(
+	href="/basic/dark/main.css",
+	rel="alternate stylesheet",
+	title="Basic dark",
+	type="text/css"
+)
 link(
 	href="/solarized/dark/main.css",
 	rel="alternate stylesheet",
