--- a/_css.jade
+++ b/_css.jade
@@ -1,17 +1,17 @@
 link(
-	href="/basic/light/main.css",
+	href="http://css.mattms.info/basic/light/index.css?t=2014-12-21T1300+10",
 	rel="stylesheet",
 	title="Basic light",
 	type="text/css"
 )
 link(
-	href="/basic/dark/main.css",
+	href="http://css.mattms.info/basic/dark/index.css?t=2014-12-21T1300+10",
 	rel="alternate stylesheet",
 	title="Basic dark",
 	type="text/css"
 )
 link(
-	href="/solarized/dark/main.css",
+	href="http://css.mattms.info/solarized/dark/index.css?t=2014-12-21T1300+10",
 	rel="alternate stylesheet",
 	title="Solarized dark",
 	type="text/css"
