--- a/_base.jade
+++ b/_base.jade
@@ -6,15 +6,19 @@ html(lang="en")
 		meta(name="author" content="Matt McKellar-Spence")
 		meta(name="description" content="CSS test page")
 		meta(name="viewport", content="width=device-width, initial-scale=1")
-		title CSS test page by MattMS
+
+		title CSS test page by Matt McKellar-Spence
 
 		block css
 			include ./_css.jade
+
 	body
 		.container
 			block content
+
 		footer.container
 			hr
 			ul
-				li: a(href="http://about.mattms.info") Read about me
+				li: a(href="http://css.mattms.info") Home page
 				li: a(href="https://github.com/MattMS/css.mattms.info") View on GitHub
+				li: a(href="http://about.mattms.info") Read about me
