--- a/basic/light/index.jade
+++ b/basic/light/index.jade
@@ -1,7 +1,7 @@
-extends ../../_base.jade
+extends ../_base.jade
 
 block css
 	link(href="./index.css", rel="stylesheet", type="text/css")
 
 block content
-	include:markdown ../../demo.md
+	include:marked ../../demo.md
