Make label bold and add top margin

--- a/solarized/dark/index.css
+++ b/solarized/dark/index.css
@@ -73,6 +73,10 @@ input,
 label {
   display: block;
 }
+label {
+  font-weight: bold;
+  margin-top: 1em;
+}
 body,
 html {
   background-color: #002b36;
